--- a/laboratorio_pandas/notebooks/Transformacao_manipulacao.ipynb
+++ b/laboratorio_pandas/notebooks/Transformacao_manipulacao.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 2,
       "metadata": {
         "id": "RrhAc0jVVikW"
       },
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -108,7 +108,7 @@
               "4  {'avaliacao_geral': '10.0', 'experiencia_local..."
             ]
           },
-          "execution_count": 110,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -339,7 +339,7 @@
               "4                                 [$200.00, $545.00]  "
             ]
           },
-          "execution_count": 111,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -421,7 +421,7 @@
               " 'preco']"
             ]
           },
-          "execution_count": 112,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -434,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -609,7 +609,7 @@
               "0       $15.00   $85.00  "
             ]
           },
-          "execution_count": 113,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -622,7 +622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -797,7 +797,7 @@
               "4       $15.00   $85.00  "
             ]
           },
-          "execution_count": 114,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -861,7 +861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 9,
       "metadata": {
         "id": "YKF8EJmScdAo"
       },
@@ -872,7 +872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 10,
       "metadata": {
         "id": "w40ggHicdpV2"
       },
@@ -883,7 +883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -926,7 +926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -969,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 13,
       "metadata": {
         "id": "2FDlBPmggoz5"
       },
@@ -980,7 +980,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1290,7 +1290,7 @@
               "[3818 rows x 13 columns]"
             ]
           },
-          "execution_count": 121,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1303,7 +1303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 15,
       "metadata": {
         "id": "98qfNzWGf4Tc"
       },
@@ -1473,7 +1473,7 @@
               "4          15.0   85.0  "
             ]
           },
-          "execution_count": 122,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1491,7 +1491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1500,7 +1500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1510,7 +1510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1813,7 +1813,7 @@
               "[3818 rows x 13 columns]"
             ]
           },
-          "execution_count": 132,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1824,7 +1824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1833,7 +1833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1842,7 +1842,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -2010,7 +2010,7 @@
               "4          15.0   85.0  "
             ]
           },
-          "execution_count": 137,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2021,7 +2021,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2032,7 +2032,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2040,6 +2040,361 @@
         "    dados_hospedagem['comodidades'].str.split(',')\n",
         ")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Tratamento dados de Tempo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data e hora atual: 2025-02-26\n"
+          ]
+        }
+      ],
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "# criando um objeto datetime com a data e hora atual\n",
+        "agora = datetime.now()\n",
+        "\n",
+        "print(\"Data e hora atual:\", agora.strftime('%Y-%m-%d'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "caminho_moveis = '../../dados_extraidos/moveis_disponiveis.json'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>data</th>\n",
+              "      <th>vaga_disponivel</th>\n",
+              "      <th>preco</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-04</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-05</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-06</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-07</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-08</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    id        data  vaga_disponivel preco\n",
+              "0  857  2016-01-04            False  None\n",
+              "1  857  2016-01-05            False  None\n",
+              "2  857  2016-01-06            False  None\n",
+              "3  857  2016-01-07            False  None\n",
+              "4  857  2016-01-08            False  None"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "dt_data = pd.read_json(caminho_moveis)\n",
+        "dt_data.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 365000 entries, 0 to 364999\n",
+            "Data columns (total 4 columns):\n",
+            " #   Column           Non-Null Count   Dtype \n",
+            "---  ------           --------------   ----- \n",
+            " 0   id               365000 non-null  int64 \n",
+            " 1   data             365000 non-null  object\n",
+            " 2   vaga_disponivel  365000 non-null  bool  \n",
+            " 3   preco            270547 non-null  object\n",
+            "dtypes: bool(1), int64(1), object(2)\n",
+            "memory usage: 11.5+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "dt_data.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dt_data['data'] = pd.to_datetime(dt_data['data'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 365000 entries, 0 to 364999\n",
+            "Data columns (total 4 columns):\n",
+            " #   Column           Non-Null Count   Dtype         \n",
+            "---  ------           --------------   -----         \n",
+            " 0   id               365000 non-null  int64         \n",
+            " 1   data             365000 non-null  datetime64[ns]\n",
+            " 2   vaga_disponivel  365000 non-null  bool          \n",
+            " 3   preco            270547 non-null  object        \n",
+            "dtypes: bool(1), datetime64[ns](1), int64(1), object(1)\n",
+            "memory usage: 11.5+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "dt_data.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>data</th>\n",
+              "      <th>vaga_disponivel</th>\n",
+              "      <th>preco</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-04</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-05</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-06</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-07</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>857</td>\n",
+              "      <td>2016-01-08</td>\n",
+              "      <td>False</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    id       data  vaga_disponivel preco\n",
+              "0  857 2016-01-04            False  None\n",
+              "1  857 2016-01-05            False  None\n",
+              "2  857 2016-01-06            False  None\n",
+              "3  857 2016-01-07            False  None\n",
+              "4  857 2016-01-08            False  None"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "dt_data.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0         2016-01\n",
+              "1         2016-01\n",
+              "2         2016-01\n",
+              "3         2016-01\n",
+              "4         2016-01\n",
+              "           ...   \n",
+              "364995    2016-12\n",
+              "364996    2016-12\n",
+              "364997    2016-12\n",
+              "364998    2017-01\n",
+              "364999    2017-01\n",
+              "Name: data, Length: 365000, dtype: object"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "dt_data['data'].dt.strftime('%Y-%m')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "data\n",
+              "2016-01    16543\n",
+              "2016-02    20128\n",
+              "2016-03    23357\n",
+              "2016-04    22597\n",
+              "2016-05    23842\n",
+              "2016-06    23651\n",
+              "2016-07    22329\n",
+              "2016-08    22529\n",
+              "2016-09    22471\n",
+              "2016-10    23765\n",
+              "2016-11    23352\n",
+              "2016-12    24409\n",
+              "2017-01     1574\n",
+              "Name: vaga_disponivel, dtype: int64"
+            ]
+          },
+          "execution_count": 36,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "subset = dt_data.groupby(dt_data['data'].dt.strftime('%Y-%m'))['vaga_disponivel'].sum()\n",
+        "subset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
